--- a/styles.css
+++ b/styles.css
@@ -73,14 +73,27 @@ body {
 
 /* INFO SECTION */
 
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2vh 20vw 5vh;
+}
+
 .info h2 {
     color: #1f2937;
     font-size: 36px;
     font-weight: bold;
+    text-align: center;
+    margin-bottom: 0px;
 }
 
 .deck {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    gap: 40px;
 }
 
 .card {
@@ -89,15 +102,24 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    width: 150px;
+    height: 300px;
 }
 
 .card-img {
-    height: 50px;
-    width: 50px;
-    border: 1px solid #3883f6;
+    height: 50%;
+    width: 100%;
+    border: 2px solid #3883f6;
+    border-radius: 10px;
 }
 
-.quote {background-color: #e5e7eb; padding: 40px 200px;}
+.card p {
+    width: 100%;
+}
+
+/* QUOTE STYLES */
+
+.quote {background-color: #e5e7eb;}
 
 .quote p {
     font-size: 36px;
