--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,12 @@ body {
     padding: 0px 10vw 30px;
 }
 
-.header, .hero-main {
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    align-content: stretch;
+    flex-wrap: wrap;
 }
 
 .logo {
@@ -33,52 +35,52 @@ body {
 .header-link a {margin-left: 15px;}
 
 .hero-main {
-    border: 1px solid green;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 60px 0px;
+    overflow: hidden;
+    min-height: 200px;
 }
 
 .hero-text, .hero-img {
     display: flex;
     flex-direction: column;
-    width: 40vw;
-    justify-content: space-between;
-    align-items: flex-start;
-    border: 1px solid red;
-    margin-top: 7vh;
-    margin-bottom: 7vh;
+    flex: 1;
     padding-right: 20px;
+}
+
+.hero-text {
+    justify-content: space-between;
+}
+
+.hero-img {
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+    color: white;
 }
 
 .hero-text h1 {
     font: bold 48px Roboto;
+    line-height: 2.5rem;
     color: #f9faf8;
     margin: 0;
-}
-
-.hero-img {
-    background-color: gray;
-    color: white;
-    height: 100%;
-    text-align: center;
-    align-items: stretch;
 }
 
 .hero-text button {
     color: white;
     background-color: #3883f6;
     margin: 0;
-    padding: 7px 20px;
+    padding: 5px 30px;
     border: 1px solid #3883f6;
     border-radius: 5px;
+    height: fit-content;
+    width: fit-content;
 }
 
 /* INFO SECTION */
 
-.info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2vh 20vw 5vh;
-}
+.info {padding: 2vh 15vw 5vh;}
 
 .info h2 {
     color: #1f2937;
@@ -92,8 +94,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 100%;
-    gap: 40px;
+    gap: 20px;
 }
 
 .card {
@@ -118,16 +119,17 @@ body {
     margin-top: 5px;
 }
 
-/* QUOTE STYLES */
+/* QUOTE SECTION */
 
 .quote {
     background-color: #e5e7eb;
-    padding: 5vh 20vw;
+    padding: 5vh 15vw;
 }
 
 .quote p {
     font-size: 36px;
     font-weight: 300;
+    font-style: italic;
     color: #1f2937;
     margin-bottom: 0px;
     padding-left: 20px;
@@ -138,16 +140,38 @@ body {
     text-align: right;
 }
 
+/* CALL TO ACTION SECTION */
+
 .call {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #3883f6;
     color: #e5e7eb;
-    margin: 50px 10vw;
+    border-radius: 5px;
+    margin: 70px 10vw;
+    padding: 40px 10vw;
 }
 
-.footer {
+.call-text * {margin: 0;}
+
+.call button {
+    border: 1px solid white;
+    border-radius: 5px;
+    background-color: #3883f6;
     color: #e5e7eb;
+    padding: 5px 30px;
+    margin: 0;
+    content: 0px;
+    height: fit-content;
+}
+
+/* FOOTER */
+
+.footer {
+    display: flex;
     justify-content: center;
+    align-items: center;
+    color: #e5e7eb;
     height: 70px;
-    text-align: center;
 }
